Commit after Aroa's pull

--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -136,8 +136,8 @@
     }
    ],
    "source": [
-    "lista5 = [ j for i in a for j in i if j>= 0.5]\n",
-    "print(lista5)"
+    "resultados = [elemento for sublist in a for elemento in sublist if elemento >= 0.5]\n",
+    "print(resultados)"
    ]
   },
   {
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -183,8 +183,8 @@
     }
    ],
    "source": [
-    "lista6 = [l for i in b for j in i for l in j]\n",
-    "print(lista6)"
+    "lista_comp = [elem for sublista in b for subsublista in sublista for elem in subsublista]\n",
+    "print(lista_comp)"
    ]
   },
   {
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -208,8 +208,8 @@
     }
    ],
    "source": [
-    "lista7 = [l for i in b for j in i for l in j if l<= 0.5]\n",
-    "print(lista7)"
+    "result = [element for sublist in b for subsublist in sublist for element in subsublist if element <= 0.5]\n",
+    "print(result)"
    ]
   },
   {
@@ -237,12 +237,98 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "_Invertir valores_"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-1, 2, -3, 4, -5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "numeros = [1, -2, 3, -4, 5] \n",
+    "sumadeinversos = [-num if num > 0 else abs(num) for num in numeros]\n",
+    "print(sumadeinversos)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "_Suma Cuadrado(n)_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "55\n"
+     ]
+    }
+   ],
+   "source": [
+    "numeros = [1, 2, 3, 4, 5] \n",
+    "def sum_cuadrados(numeros): return sum([num**2 for num in numeros])\n",
+    "\n",
+    "print(sum_cuadrados(numeros)) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "_Digitalizar_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "numero = 12345 \n",
+    "digitos = [int(d) for d in str(numero)] \n",
+    "\n",
+    "print(digitos)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "_Filtrado de listas_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Filtrado de listas\n",
     "filter_list1 = ([1,2,'a','b'])\n",
     "filter_list2 = ([1,'a','b',0,15])\n",
     "filter_list3 = ([1,2,'aasf','1','123',123]) \n",
@@ -251,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -275,8 +361,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "_Lista arimética_"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -285,14 +378,12 @@
        "[0, 2, 4, 6, 8, 10, 12, 14, 16, 18]"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Lista arimética\n",
-    "\n",
     "# first the first term in the sequence\n",
     "# c the constant that you are going to ADD ( since it is an arithmetic sequence...)\n",
     "# l the number of terms that should be returned\n",
@@ -308,8 +399,58 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "_Multiplos de 3 o 5_"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "60\n"
+     ]
+    }
+   ],
+   "source": [
+    "def sum_multiplos3_o_5(numero):\n",
+    "    return 0 if numero < 0 else sum([x for x in range(numero) if x % 3 == 0 or x % 5 == 0])\n",
+    "\n",
+    "numero = 18 #aqui meter el numero que se quiera\n",
+    "result = sum_multiplos3_o_5(numero)\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "_Conteo posit/suma negat_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "_Categorizar nuevo miembro_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +459,7 @@
        "['Open', 'Open', 'Senior', 'Open', 'Open', 'Senior']"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,6 +477,20 @@
     "\n",
     "lista_output\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "_Contador de tiempo en cola_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
