Last commit, completando todos los ejercicios

--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -431,15 +431,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "_Conteo posit/suma negat_"
+    "_Conteo posit/suma negativa_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[10, -65]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "original=[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, -11, -12, -13, -14, -15]\n",
+    "\n",
+    "conteo = [len([i for i in original if i>0]), sum([i for i in original if i<0])]\n",
+    "\n",
+    "conteo"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -487,10 +504,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 3, 4, 6, 1]\n",
+      "[3, 4, 6, 1, 4]\n",
+      "[4, 6, 1, 4, 2]\n",
+      "[1, 4, 2, 4, 5]\n",
+      "[2, 4, 5, 3]\n",
+      "[4, 5, 3, 1]\n",
+      "[5, 3, 1, 3]\n",
+      "[1, 3, 5, 2]\n",
+      "[5, 2, 2]\n",
+      "[2, 2, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Each ticket takes 1 minute to emit\n",
+    "\n",
+    "#Pseudocode:\n",
+    "#First person in the list takes ticket, goes back to the last position if they need more tickects\n",
+    "#Advance second person to the first position \n",
+    "#Repeat until 3 tickets\n",
+    "#Sum time spent\n",
+    "\n",
+    "initial_queue = [2, 5, 3, 4, 6]\n",
+    "position = 2\n",
+    "tickets_obtained = 0\n",
+    "time_spent = 0\n",
+    "\n",
+    "while tickets_obtained < 3:\n",
+    "    while position != -1:\n",
+    "        position -= 1\n",
+    "        time_spent += 1\n",
+    "        temp_first = initial_queue[0] - 1\n",
+    "        if temp_first == 0:\n",
+    "            del initial_queue[0]\n",
+    "            \n",
+    "        elif initial_queue[0] > 0:\n",
+    "            initial_queue.append(temp_first)\n",
+    "            initial_queue = initial_queue[1:]\n",
+    "            print(initial_queue)\n",
+    "\n",
+    "    else: \n",
+    "        tickets_obtained += 1\n",
+    "        initial_queue.append(initial_queue[0])\n",
+    "        initial_queue = initial_queue[1:]\n",
+    "        position += len(initial_queue)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "time_spent"
+   ]
   }
  ],
  "metadata": {
